--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <center><h2>UP APPS</h2></center>
 
     <h3><p>Lista de apks de minecraft</p></h3>
+    <p><a href="https://www.mediafire.com/file/1fzgm231mk5vk3z/MCPE_1.19.70.apk/file">MInecraft 1.19.70</a></p>
 </body>
 </html>
