--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link rel="stylesheet" href="./css/home.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,22 @@
 </head>
 <body>
     <center><h2>UP APPS</h2></center>
+
+    <nav>
+        <ul class="main-links">
+          <li>Elemento 1</li>
+          <li>Elemento 2</li>
+          <li>Elemento 3</li>
+          <li class="dropdown-li">
+            Elemento dropdown
+            <ul class="dropdown">
+              <li>item</li>
+              <li>item</li>
+              <li>item</li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
 
     <h3><p>Lista de apks de minecraft</p></h3>
     <p><a href="https://www.mediafire.com/file/1fzgm231mk5vk3z/MCPE_1.19.70.apk/file">MInecraft 1.19.70</a></p>
