--- a/h/d.html
+++ b/h/d.html
@@ -9,5 +9,12 @@
 <body>
     <center><h2>DOWNLOADS</h2></center>
     
+    <h3><p>Minecraft versions</p></h3>
+    <p><a href="https://www.mediafire.com/file/1fzgm231mk5vk3z/MCPE_1.19.70.apk/file">MInecraft 1.19.70</a></p>
+    <p>---------------------------------</p>
+    <br>
+    <p><h3>Craftman versions</h3></p>
+    <p><a href="">Craftman 0.15.0</a></p>
+    <p>---------------------------------</p>
 </body>
 </html>
