--- a/index.html
+++ b/index.html
@@ -45,13 +45,8 @@
   </div>
   <a href="./h/d.html">Downloas</a>
 </div>
-
-
-
-    <h3><p>Lista de apks de minecraft</p></h3>
-    <p><a href="https://www.mediafire.com/file/1fzgm231mk5vk3z/MCPE_1.19.70.apk/file">MInecraft 1.19.70</a></p>
-    <br>
-    <p><h3>Craftman</h3></p>
-    <p><a href="">Craftman 0.15.0</a></p>
+<br>
+<br>
+<p>¡Página web en desarrolo!</p>
 </body>
 </html>
