--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>UPDATE MINECRAFT</title>
 </head>
 <body>
-    <center><h2>UP APPS</h2></center>
+    <center><h2>INDEX APK</h2></center>
 
 
     <!-- Load font awesome icons -->
