--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <a href="#link4">null</a>
     </div>
   </div>
-  <a href="./h/d.html">Downloas</a>
+  <a href="./h/d">Downloas</a>
 </div>
 <br>
 <br>
