--- a/h/d.html
+++ b/h/d.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link rel="stylesheet" href="/css/home.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,10 @@
 </head>
 <body>
     <center><h2>DOWNLOADS</h2></center>
+
+    <div class="navbar">
+        <a href="#home">Home</a>
+      </div>
     
     <h3><p>Minecraft versions</p></h3>
     <p><a href="https://www.mediafire.com/file/1fzgm231mk5vk3z/MCPE_1.19.70.apk/file">MInecraft 1.19.70</a></p>
