--- a/h/d.html
+++ b/h/d.html
@@ -11,7 +11,7 @@
     <center><h2>DOWNLOADS</h2></center>
 
     <div class="navbar">
-        <a href="../index">Home</a>
+        <a href="www.healtpix.tk">Home</a>
       </div>
     
     <h3><p>Minecraft versions</p></h3>
