--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <a href="#express">null</a>
     </div>
   </div>
-  <a href="./h/d">Downloas</a>
+  <a href="./h/downloads">Downloas</a>
 </div>
 <br>
 <br>
