--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
   <div class="subnav">
     <button class="subnavbtn">null <i class="fa fa-caret-down"></i></button>
     <div class="subnav-content">
-      <a href="#bring">null</a>
-      <a href="#deliver">null</a>
-      <a href="#package">null</a>
-      <a href="#express">null</a>
+      <a href="#null">null</a>
     </div>
   </div>
   <a href="./h/downloads">Downloas</a>
