--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" href="./css/home.css">
     <meta charset="UTF-8">
+    src
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UPDATE MINECRAFT</title>
@@ -29,6 +30,14 @@
 <p>¡Página web en desarrolo!</p>
 <br>
 <p>14/03/2023</p>
-<input type="datetime">
+<br>
+
+<form name="form_reloj">
+  <input type="text" name="reloj" size="10">
+</form>
+<script>
+  momentoActual = new Date()
+</script>
+
 </body>
 </html>
