--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UPDATE MINECRAFT</title>
 </head>
-<body>
+  <body onload="mueveReloj()">
     <center><h2>INDEX APK</h2></center>
 
 
@@ -36,7 +36,15 @@
   <input type="text" name="reloj" size="10">
 </form>
 <script>
+  function mueveReloj(){
   momentoActual = new Date()
+  hora = momentoActual.getHours()
+minuto = momentoActual.getMinutes()
+segundo = momentoActual.getSeconds()
+var horaImprimible = hora + " : " + minuto + " : " + segundo
+document.form_reloj.reloj.value = horaImprimible
+  }
+  setTimeout("mueveReloj()",1000)
 </script>
 
 </body>
