--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <link rel="stylesheet" href="./css/home.css">
     <meta charset="UTF-8">
-    src
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UPDATE MINECRAFT</title>
 </head>
-  <body onload="mueveReloj()">
+<body>
     <center><h2>INDEX APK</h2></center>
 
 
@@ -31,21 +30,7 @@
 <br>
 <p>14/03/2023</p>
 <br>
-
-<form name="form_reloj">
-  <input type="text" name="reloj" size="10">
-</form>
-<script>
-  function mueveReloj(){
-  momentoActual = new Date()
-  hora = momentoActual.getHours()
-minuto = momentoActual.getMinutes()
-segundo = momentoActual.getSeconds()
-var horaImprimible = hora + " : " + minuto + " : " + segundo
-document.form_reloj.reloj.value = horaImprimible
-  }
-  setTimeout("mueveReloj()",1000)
-</script>
+<!---HOUR OF PAGE-->
 
 </body>
 </html>
