--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UPDATE MINECRAFT</title>
 </head>
-<body>
+<body onload="mueveReloj()">
     <center><h2>INDEX APK</h2></center>
 
 
@@ -31,6 +31,36 @@
 <p>14/03/2023</p>
 <br>
 <!---HOUR OF PAGE-->
+<script language="JavaScript">
+  function mueveReloj(){
+      momentoActual = new Date()
+      hora = momentoActual.getHours()
+      minuto = momentoActual.getMinutes()
+      segundo = momentoActual.getSeconds()
+  
+      str_segundo = new String (segundo)
+      if (str_segundo.length == 1)
+         segundo = "0" + segundo
+  
+      str_minuto = new String (minuto)
+      if (str_minuto.length == 1)
+         minuto = "0" + minuto
+  
+      str_hora = new String (hora)
+      if (str_hora.length == 1)
+         hora = "0" + hora
+  
+      horaImprimible = hora + " : " + minuto + " : " + segundo
+  
+      document.form_reloj.reloj.value = horaImprimible
+  
+      setTimeout("mueveReloj()",1000)
+  }
+  </script>
+
+  <form name="form_reloj">
+    <input type="text" name="reloj" size="10" style="background-color : Black; color : White; font-family : Verdana, Arial, Helvetica; font-size : 8pt; text-align : center;" onfocus="window.document.form_reloj.reloj.blur()">
+    </form>
 
 </body>
 </html>
