--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UPDATE MINECRAFT</title>
+    <center><h2>INDEX</h2></center>
 </head>
 <body onload="mueveReloj()">
-    <center><h2>INDEX APK</h2></center>
+
 <!-- The navigation menu -->
 <div class="navbar">
   <div class="subnav">
@@ -22,11 +23,11 @@
   <a href="./h/downloads">Downloas</a>
 </div>
 <br>
-<br>
 <p>¡Página web en desarrolo!</p>
 <br>
 <p>14/03/2023</p>
 <br>
+
 <!---HOUR OF PAGE-->
   <form name="form_reloj">
     <input type="text" name="reloj" size="10" style="background-color : Black; color : White; font-family : Verdana, Arial, Helvetica; font-size : 8pt; text-align : center;" onfocus="window.document.form_reloj.reloj.blur()">
