--- a/h/downloads.html
+++ b/h/downloads.html
@@ -16,6 +16,8 @@
     <p>---------------------------------</p>
     <h3><p>Minecraft versions</p></h3>
     <p><a href="https://www.mediafire.com/file/1fzgm231mk5vk3z/MCPE_1.19.70.apk/file">MInecraft 1.19.70</a></p>
+    <p><a href="https://www.mediafire.com/file/mxyz6hcyym329ic/MCPE_1.19.50.apk/file">Minecraft 1.19.50</a></p>
+    <p><a href="https://www.mediafire.com/file/506l8cufu8a0y5o/MCPE_1.19.51.apk/file">Minecraft 1.19.51</a></p>
     <p>---------------------------------</p>
     <br>
     <p><h3>Craftman versions</h3></p>
