--- a/h/downloads.html
+++ b/h/downloads.html
@@ -23,5 +23,6 @@
     <p><h3>Craftman versions</h3></p>
     <p><a href="https://www.mediafire.com/file/hn0akoh56dqglld/CRAFTMAN_TEXTURE_REUP_1.19.apk/file">Craftman 1.19.0</a></p>
     <p>---------------------------------</p>
+    Set-Cookie: NOMBRE = VALOR; expira = FECHA; ruta = RUTA; dominio = DOMAIN_NAME;
 </body>
 </html>
