--- a/h/downloads.html
+++ b/h/downloads.html
@@ -21,7 +21,7 @@
     <p>---------------------------------</p>
     <br>
     <p><h3>Craftman versions</h3></p>
-    <p><Craftman href="https://www.mediafire.com/file/hn0akoh56dqglld/CRAFTMAN_TEXTURE_REUP_1.19.apk/file">Craftman 1.19.0</a></p>
+    <p><a href="https://www.mediafire.com/file/hn0akoh56dqglld/CRAFTMAN_TEXTURE_REUP_1.19.apk/file">Craftman 1.19.0</a></p>
     <p>---------------------------------</p>
 </body>
 </html>
