--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UPDATE MINECRAFT</title>
-    <center><h2>INDEX</h2></center>
+    <center><h2>BASE</h2></center>
 </head>
 <body onload="mueveReloj()">
 
