--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="subnav">
     <button class="subnavbtn">null <i class="fa fa-caret-down"></i></button>
     <div class="subnav-content">
-      <a href="#null">null</a>
+      <a href="./h/gptia">CHAT-GPT IA</a>
     </div>
   </div>
   <a href="./h/downloads">Downloas</a>
