--- a/h/gptia.html
+++ b/h/gptia.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
     <script src="../js/chatia.js"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IA</title>
 </head>
-<body>
+<body> 
+    <p>¡Puede que no funcione!</p>
 
     <div>
-        <h2>Chat con GPT-3</h2>
+        <h2>Chat IA</h2>
         <div>
           <input type="text" id="input" placeholder="Escribe algo...">
           <button onclick="generateResponse()">Enviar</button>
