--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a href="./h/gptia/">CHAT-GPT IA</a>
     </div>
   </div>
-  <a href="./h/downloads/">Downloas</a>
+  <a href="./h/downloads">Downloads</a>
 </div>
 <br>
 <p>¡Unknow!</p>
