--- a/index.html
+++ b/index.html
@@ -1,37 +1,15 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./css/home.css">
-    <meta charset="UTF-8">
-    <script src="./js/date_time.js"></script>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UPDATE MINECRAFT</title>
-    <center><h2>BASE</h2></center>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MCD</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body onload="mueveReloj()">
+<body>
 
-<!-- The navigation menu -->
-<div class="navbar">
-  <div class="subnav">
-    <button class="subnavbtn">Options <i class="fa fa-caret-down"></i></button>
-    <div class="subnav-content">
-      <a href="./h/gptia/">CHAT-GPT IA</a>
-    </div>
-  </div>
-  <a href="./h/downloads">Downloads</a>
-</div>
-<br>
-<p>¡Unknow!</p>
-<br>
-<p>14/03/2023</p>
-<br>
-
-<!---HOUR OF PAGE-->
-  <form name="form_reloj">
-    <input type="text" name="reloj" size="10" style="background-color : Black; color : White; font-family : Verdana, Arial, Helvetica; font-size : 8pt; text-align : center;" onfocus="window.document.form_reloj.reloj.blur()">
-    </form>
-
+  <header><h2 class="logo">HEALTPIX</h2></header>
+  
 </body>
 </html>
