--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 <body>
 
-  <header><h2 class="logo">HEALTPIX</h2></header>
+  <header><h2 class="logo">HEALTPIX</h2>
+  <nav class="navigation">
+    <a href="index">Home</a>
+    <a href="./h/downloads">Downloads</a>
+    <a href="./c/ia">Chat IA</a>
+  </nav>
+  
+  </header>
   
 </body>
 </html>
