--- a/h/downloads.html
+++ b/h/downloads.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="/css/home.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Downloads</title>
+    <link rel="stylesheet" href="../css/download.css">
 </head>
 <body>
-    <center><h2>DOWNLOADS</h2></center>
 
-    <div class="navbar">
+    <header><h2 class="logo">Downloads</h2>
+    <nav class="navigation">
         <a href="../index">Home</a>
-      </div>
-    <p>---------------------------------</p>
-    <h3><p>Minecraft versions</p></h3>
+    </nav>
+</header>
+
+<nav class="links">
+    <h3><p>Minecraft</p></h3>
     <p><a href="https://www.mediafire.com/file/1fzgm231mk5vk3z/MCPE_1.19.70.apk/file">MInecraft 1.19.70</a></p>
     <p><a href="https://www.mediafire.com/file/mxyz6hcyym329ic/MCPE_1.19.50.apk/file">Minecraft 1.19.50</a></p>
     <p><a href="https://www.mediafire.com/file/506l8cufu8a0y5o/MCPE_1.19.51.apk/file">Minecraft 1.19.51</a></p>
-    <p>---------------------------------</p>
     <br>
     <p><h3>Craftman versions</h3></p>
     <p><a href="https://www.mediafire.com/file/hn0akoh56dqglld/CRAFTMAN_TEXTURE_REUP_1.19.apk/file">Craftman 1.19.0</a></p>
-    <p>---------------------------------</p>
+    <p><a href="../d/Crafman.apk" target="_blank" rel="noopener noreferrer">Craftman</a></p>
+</nav>
 </body>
 </html>
