--- a/h/downloads.html
+++ b/h/downloads.html
@@ -16,12 +16,12 @@
 </header>
 
 <nav class="links">
-    <h3><p>Minecraft</p></h3>
+    <p><h3>MINECRAFT</h3></p>
     <p><a href="https://www.mediafire.com/file/1fzgm231mk5vk3z/MCPE_1.19.70.apk/file" target="_blank">MInecraft 1.19.70</a></p>
     <p><a href="https://www.mediafire.com/file/mxyz6hcyym329ic/MCPE_1.19.50.apk/file" target="_blank">Minecraft 1.19.50</a></p>
     <p><a href="https://www.mediafire.com/file/506l8cufu8a0y5o/MCPE_1.19.51.apk/file" target="_blank">Minecraft 1.19.51</a></p>
     <br>
-    <p><h3>Craftman versions</h3></p>
+    <p><h3>CRAFTMAN</h3></p>
     <p><a href="https://www.mediafire.com/file/hn0akoh56dqglld/CRAFTMAN_TEXTURE_REUP_1.19.apk/file" target="_blank">Craftman 1.19.0</a></p>
     <p><a href="../d/Crafman.apk" target="_blank" rel="noopener noreferrer">Craftman</a></p>
 </nav>
