--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HealtPix</title>
+  <title>HEALTPIX</title>
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -17,5 +17,12 @@
   </nav>
   </header>
   
+  <section>
+    <p>
+        <span id="days"></span> días / <span id="hours"></span> horas / <span id="minutes"></span> minutos / <span id="seconds"></span> segundos
+    </p>
+</section> 
+<script src="./js/date_time.js"></script>
+
 </body>
 </html>
