--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
   </nav>
   </header>
   
-  <section>
-    <p>
-        <span id="days"></span> días / <span id="hours"></span> horas / <span id="minutes"></span> minutos / <span id="seconds"></span> segundos
-    </p>
-</section> 
-<script src="./js/date_time.js"></script>
-
+  <div class="countdown">
+    <section>
+      <p>
+          <span id="days"></span> días / <span id="hours"></span> horas / <span id="minutes"></span> minutos / <span id="seconds"></span> segundos
+      </p>
+  </section> 
+  <script src="./js/date_time.js"></script>
+  </div>
+  
 </body>
 </html>
