--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </header>
   
   <div class="countdown">
+    <p class="timeout">Tiempo restante:</p>
     <section>
       <p>
           <span id="days"></span> días / <span id="hours"></span> horas / <span id="minutes"></span> minutos / <span id="seconds"></span> segundos
