--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-<script language="javascript">document.write(unescape('%3C%21%44%4F%43%54%59%50%45%20%68%74%6D%6C%3E%0A%3C%68%74%6D%6C%20%6C%61%6E%67%3D%22%65%73%22%3E%0A%3C%68%65%61%64%3E%0A%3C%73%63%72%69%70%74%20%73%72%63%3D%22%2E%2F%6A%73%2F%61%2E%6A%73%22%3E%3C%2F%73%63%72%69%70%74%3E%0A%20%20%3C%6D%65%74%61%20%63%68%61%72%73%65%74%3D%22%55%54%46%2D%38%22%3E%0A%20%20%3C%6D%65%74%61%20%68%74%74%70%2D%65%71%75%69%76%3D%22%58%2D%55%41%2D%43%6F%6D%70%61%74%69%62%6C%65%22%20%63%6F%6E%74%65%6E%74%3D%22%49%45%3D%65%64%67%65%22%3E%0A%20%20%3C%6D%65%74%61%20%6E%61%6D%65%3D%22%76%69%65%77%70%6F%72%74%22%20%63%6F%6E%74%65%6E%74%3D%22%77%69%64%74%68%3D%64%65%76%69%63%65%2D%77%69%64%74%68%2C%20%69%6E%69%74%69%61%6C%2D%73%63%61%6C%65%3D%31%2E%30%22%3E%0A%20%20%3C%74%69%74%6C%65%3E%48%45%41%4C%54%50%49%58%3C%2F%74%69%74%6C%65%3E%0A%20%20%3C%6C%69%6E%6B%20%72%65%6C%3D%22%73%74%79%6C%65%73%68%65%65%74%22%20%68%72%65%66%3D%22%2E%2F%63%73%73%2F%73%74%79%6C%65%2E%63%73%73%22%3E%0A%3C%2F%68%65%61%64%3E%0A%3C%62%6F%64%79%3E%0A%0A%20%20%3C%68%65%61%64%65%72%3E%3C%68%32%20%63%6C%61%73%73%3D%22%6C%6F%67%6F%22%3E%48%45%41%4C%54%50%49%58%3C%2F%68%32%3E%0A%20%20%3C%6E%61%76%20%63%6C%61%73%73%3D%22%6E%61%76%69%67%61%74%69%6F%6E%22%3E%0A%20%20%20%20%3C%61%20%68%72%65%66%3D%22%2E%2F%68%2F%64%6F%77%6E%6C%6F%61%64%73%22%3E%44%6F%77%6E%6C%6F%61%64%73%3C%2F%61%3E%0A%20%20%20%20%3C%61%20%68%72%65%66%3D%22%2E%2F%63%2F%69%61%22%3E%43%68%61%74%20%49%41%3C%2F%61%3E%0A%20%20%3C%2F%6E%61%76%3E%0A%20%20%3C%2F%68%65%61%64%65%72%3E%0A%20%20%0A%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%63%6F%75%6E%74%64%6F%77%6E%22%3E%0A%20%20%20%20%3C%70%20%63%6C%61%73%73%3D%22%74%69%6D%65%6F%75%74%22%3E%54%69%65%6D%70%6F%20%72%65%73%74%61%6E%74%65%3A%3C%2F%70%3E%0A%20%20%20%20%3C%73%65%63%74%69%6F%6E%3E%0A%20%20%20%20%20%20%3C%70%3E%0A%20%20%20%20%20%20%20%20%20%20%3C%73%70%61%6E%20%69%64%3D%22%64%61%79%73%22%3E%3C%2F%73%70%61%6E%3E%20%64%ED%61%73%20%2F%20%3C%73%70%61%6E%20%69%64%3D%22%68%6F%75%72%73%22%3E%3C%2F%73%70%61%6E%3E%20%68%6F%72%61%73%20%2F%20%3C%73%70%61%6E%20%69%64%3D%22%6D%69%6E%75%74%65%73%22%3E%3C%2F%73%70%61%6E%3E%20%6D%69%6E%75%74%6F%73%20%2F%20%3C%73%70%61%6E%20%69%64%3D%22%73%65%63%6F%6E%64%73%22%3E%3C%2F%73%70%61%6E%3E%20%73%65%67%75%6E%64%6F%73%0A%20%20%20%20%20%20%3C%2F%70%3E%0A%20%20%3C%2F%73%65%63%74%69%6F%6E%3E%20%0A%20%20%3C%73%63%72%69%70%74%20%73%72%63%3D%22%2E%2F%6A%73%2F%64%61%74%65%5F%74%69%6D%65%2E%6A%73%22%3E%3C%2F%73%63%72%69%70%74%3E%0A%20%20%3C%2F%64%69%76%3E%0A%20%20%0A%3C%2F%62%6F%64%79%3E%0A%3C%2F%68%74%6D%6C%3E'))</script>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<script src="./js/a.js"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HEALTPIX</title>
+  <link rel="stylesheet" href="./css/style.css">
+</head>
+<body>
+
+  <header><h2 class="logo">HEALTPIX</h2>
+  <nav class="navigation">
+    <a href="./h/downloads">Downloads</a>
+    <a href="./c/ia">Chat IA</a>
+  </nav>
+  </header>
+  
+  <div class="countdown">
+    <p class="timeout">Tiempo restante:</p>
+    <section>
+      <p>
+          <span id="days"></span> días <span id="hours"></span> horas <span id="minutes"></span> minutos <span id="seconds"></span> segundos
+      </p>
+  </section> 
+  <script src="./js/date_time.js"></script>
+  </div>
+  
+</body>
+</html>
