--- a/h/downloads.html
+++ b/h/downloads.html
@@ -22,7 +22,7 @@
     <p><a href="https://www.mediafire.com/file/506l8cufu8a0y5o/MCPE_1.19.51.apk/file" target="_blank">Minecraft 1.19.51</a></p>
     <br>
     <p><h3>CRAFTMAN</h3></p>
-    <p><a href="https://www.mediafire.com/file/hn0akoh56dqglld/CRAFTMAN_TEXTURE_REUP_1.19.apk/file" target="_blank">Craftman 1.19.0</a></p>
+    <p><a href="../d/craftman.apk" download="Crafman Con Texturas" target="_blank">Craftman 1.19.0</a></p>
 </nav>
 </body>
 </html>
