--- a/h/downloads.html
+++ b/h/downloads.html
@@ -16,13 +16,24 @@
 </header>
 
 <nav class="links">
-    <p><h3>MINECRAFT</h3></p>
-    <p><a href="https://www.mediafire.com/file/1fzgm231mk5vk3z/MCPE_1.19.70.apk/file" target="_blank">MInecraft 1.19.70</a></p>
-    <p><a href="https://www.mediafire.com/file/mxyz6hcyym329ic/MCPE_1.19.50.apk/file" target="_blank">Minecraft 1.19.50</a></p>
-    <p><a href="https://www.mediafire.com/file/506l8cufu8a0y5o/MCPE_1.19.51.apk/file" target="_blank">Minecraft 1.19.51</a></p>
+    <h3>MINECRAFT</h3>
+    <a href="https://www.mediafire.com/file/1fzgm231mk5vk3z/MCPE_1.19.70.apk/file" target="_blank">MInecraft 1.19.70</a>
     <br>
-    <p><h3>CRAFTMAN</h3></p>
-    <p><a href="../d/craftman.apk" download="Crafman Con Texturas" target="_blank">Craftman 1.19.0</a></p>
+    <a href="https://www.mediafire.com/file/mxyz6hcyym329ic/MCPE_1.19.50.apk/file" target="_blank">Minecraft 1.19.50</a>
+    <br>
+    <a href="https://www.mediafire.com/file/506l8cufu8a0y5o/MCPE_1.19.51.apk/file" target="_blank">Minecraft 1.19.51</a>
+    <br>
 </nav>
+
+    <nav class="btnd">
+        <h3>CRAFTMAN</h3>
+    <p>Craftman 1.19</p>
+    <button
+    onClick="DownloadFromUrl('https://www.healtpix.tk/d/craftman.apk',
+                             'Crafman Con Texturas.apk')">
+    Descargar
+  </button>  
+
+    </nav>
 </body>
 </html>
