--- a/h/downloads.html
+++ b/h/downloads.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Downloads</title>
+    <script src="../js/download.js"></script>
     <link rel="stylesheet" href="../css/download.css">
 </head>
 <body>
