--- a/h/cap.html
+++ b/h/cap.html
@@ -2,18 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script async src='https://www.google.com/recaptcha/api.js?hl=es'></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
 
-    <form action="?" method="POST">
-        <div class="g-recaptcha" data-sitekey="6Lc5px8lAAAAAOloPBejVKZVbfYm2GalCrDnlL7Q"></div>
-        <br/>
-        <input type="submit" value="Submit">
-        </form>
-    
+    <span class="msg-error error"></span>
+    <div id="recaptcha" class="g-recaptcha" data-sitekey="6Lc5px8lAAAAAMI7AQ8kDLF3nRqKdTbFD2wQzU_e"></div>
+    <input type="submit" value="Submit" />
 </body>
 </html>
