--- a/h/downloads.html
+++ b/h/downloads.html
@@ -13,6 +13,7 @@
     <header><h2 class="logo">Downloads</h2>
     <nav class="navigation">
         <a href="../index">Home</a>
+        <a href="./search.html">Búsqueda</a>
     </nav>
 </header>
 
