--- a/h/search.html
+++ b/h/search.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script src="../js/buscador.js"></script>
+  
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search</title>
@@ -11,6 +11,9 @@
     <script async src="https://cse.google.com/cse.js?cx=b6b203240072c4014">
     </script>
     <div class="gcse-search"></div>
-
+    <br><br>
+    <div id="container">
+    </div>
+    <script src="../js/buscador.js"></script>
 </body>
 </html>
