--- a/h/test.html
+++ b/h/test.html
@@ -12,9 +12,9 @@
      <div style="text-align: center;">
      <a class="button" href="https://www.healtpix.tk/d/craftman.apk" 
      id="download" target="_blank"><i class="fa fa-download">
-     </i>Descarga Ahora</a>              
+     </i>Descargar Ahora</a>              
       <button class="ddd" id="btn"><i class="fa fa-download">
-      </i>Descargar</button>              
+      </i>No Descargar</button>              
     <script src="../js/countdown.js"></script>
 </body>
 </html>
