--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <span id="days"></span> días <span id="hours"></span> horas <span id="minutes"></span> minutos <span id="seconds"></span> segundos
       </p>
   </section> 
+  <!--THE END OF CODE NORMAL-->
   <script src="./js/date_time.js"></script>
   </div>
   
