--- a/h/test2.html
+++ b/h/test2.html
@@ -1,48 +1,16 @@
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Notificaciones JavaScript</title>
-        <script charset="UTF-8">
-        function notifyMe() {
-            //Vamos a comprobar si el navegador es compatible con las notificaciones
-            if (!("Notification" in window)) {
-                alert("This browser does not support desktop notification");
-            }
-            // Vamos a ver si ya se han concedido permisos de notificación
-            else if (Notification.permission === "granted") {
-                // Si está bien vamos a crear una notificación
-                var body = "Hola";
-                var icon = "https://www.quecodigo.com/img/qc_logo.jpg";
-                var title = "Notificación";
-                var options = {
-                    body: body,
-                    icon: icon,
-                    lang: "ES",
-                    renotify: "true"
-                }
-                var notification = new Notification(title,options);
-                var audio = new Audio('https://www.quecodigo.com/web/antigua/sounds/notificacion.mp3');
-                audio.play();
-                notification.onclick = function () {
-                    //action
-                };
-                setTimeout(notification.close.bind(notification), 5000);
-            }
-            // De lo contrario, tenemos que pedir permiso al usuario
-            else if (Notification.permission !== 'denied') {
-                Notification.requestPermission(function (permission) {
-                    // Si el usuario acepta, vamos a crear una notificación
-                    if (permission === "granted") {
-                        var notification = new Notification("Gracias, Ahora podras recibir notifiaciones de nuestra página");
-                    }
-                });
-            }
-            // Por fin, si el usuario ha denegado notificaciones, y usted
-            // Quiere ser respetuoso no hay necesidad de preocuparse más sobre ellos.
-        }
-        </script>
-    </head>
-    <body>
-        <button onclick="notifyMe()">Notificame!</button>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <script src="../js/test2.js"></script>
+    <link rel="stylesheet" href="../css/test2.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TEST SETTINGS</title>
+</head>
+<body>
+    
+    <button onclick="myFunction()">Permiso para notificación</button>
+  
+</body>
 </html>
