--- a/h/test2.html
+++ b/h/test2.html
@@ -11,6 +11,8 @@
 <body>
     
     <button onclick="myFunction()">Permiso para notificación</button>
-  
+  <br><br>
+  <button id="enable">Habilitar notificaciones</button>
+
 </body>
 </html>
