--- a/h/test2.html
+++ b/h/test2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <script src="../js/test2.js"></script>
     <link rel="stylesheet" href="../css/test2.css">
