--- a/h/test2.html
+++ b/h/test2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/push.js/0.0.11/push.min.js"></script>
     <script src="../js/test2.js"></script>
     <link rel="stylesheet" href="../css/test2.css">
     <meta charset="UTF-8">
