--- a/h/videos.html
+++ b/h/videos.html
@@ -2,17 +2,16 @@
 <html lang="es">
 <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/push.js/0.0.11/push.min.js"></script>
-    <script src="../js/test2.js"></script>
-    <link rel="stylesheet" href="../css/test2.css">
+    <script src="../js/videos.js"></script>
+    <link rel="stylesheet" href="../css/videos.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TEST SETTINGS</title>
 </head>
 <body>
-    
-    <button onclick="myFunction()">Permiso para notificación</button>
-  <br><br>
 
+  <iframe id="video" src="https://mega.nz/embed/QCFhGJJK#JDLjV1LQFr5Mv93oVgDxo8HaUvBiotMPML-DNAEHsRs" width="640" height="360" frameborder="0" allowfullscreen></iframe> <br>
+<button onclick="togglePictureInPicture()">Activar PIP</button>
 </body>
 </html>
