--- a/h/videos.html
+++ b/h/videos.html
@@ -10,24 +10,16 @@
 </head>
 <body>
 
-  <video
-    id="my-video"
-    class="video-js"
-    controls
-    preload="auto"
-    width="640"
-    height="264"
-    poster="../img/danmachi-img.jpg"
-    data-setup="{}"
-  >
-    <source src="https://mega.nz/file/2lAQSbSS#l9KDa8fn5f84PUQDz3CxEsCzRkL6DS9Gpm9JgpznfLs" type="video/mp4" />
-    <source src="MY_VIDEO.webm" type="video/webm" />
-    <p class="vjs-no-js">
-      Para ver este video, habilite JavaScript y considere actualizar a un navegador web que
-      <a href="https://videojs.com/html5-video-support/" target="_blank"
-        >soporte de HTML5 video</a
-      >
-    </p>
+  <iframe 
+  width="560" 
+  height="315" 
+  src="https://mega.nz/file/2lAQSbSS#l9KDa8fn5f84PUQDz3CxEsCzRkL6DS9Gpm9JgpznfLs" 
+  title="YouTube video player" 
+  frameborder="0" 
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
+  picture-in-picture" 
+  allowfullscreen>
+  </iframe>
 
 </body>
 </html>
