--- a/h/videos.html
+++ b/h/videos.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <script src="../js/video.min.js"></script>
-    <link rel="stylesheet" href="../css/video-js.min.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +12,7 @@
   width="560" 
   height="315" 
   src="https://mega.nz/file/2lAQSbSS#l9KDa8fn5f84PUQDz3CxEsCzRkL6DS9Gpm9JgpznfLs" 
-  title="YouTube video player" 
+  title="Danmachi" 
   frameborder="0" 
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
   picture-in-picture" 
