--- a/h/videos.html
+++ b/h/videos.html
@@ -8,16 +8,15 @@
 </head>
 <body>
 
-  <iframe 
-  width="560" 
-  height="315" 
-  src="https://mega.nz/file/2lAQSbSS#l9KDa8fn5f84PUQDz3CxEsCzRkL6DS9Gpm9JgpznfLs" 
-  title="Danmachi" 
-  frameborder="0" 
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; 
-  picture-in-picture" 
-  allowfullscreen>
-  </iframe>
+ <iframe 
+ width="640" 
+ height="360" 
+ frameborder="0" 
+ src="https://mega.nz/embed/2lAQSbSS#l9KDa8fn5f84PUQDz3CxEsCzRkL6DS9Gpm9JgpznfLs" 
+ allowfullscreen
+ loading>
+ </iframe>
+<br><br>
 
 </body>
 </html>
