--- a/h/des.html
+++ b/h/des.html
@@ -15,7 +15,7 @@
     <!-- Links-->
     <link rel="stylesheet" href="../ofu/css/main.css" />
     <link rel="stylesheet" href="../ofu/css/codemirror.css" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="../img/favicon.ico" />
     <script src="../ofu/datadog-rum-v4.js" type="text/javascript"></script>
   </head>
   <body>
