--- a/h/des.html
+++ b/h/des.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+    <audio preload="metadata" autoplay>
+      <source src="../music/background.mp3" type="audio/mpeg">
+    </audio>
     <!-- Meta Data -->
     <title>JavaScript Deobfuscator</title>
     <meta charset="utf-8" />
