--- a/h/test.html
+++ b/h/test.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <audio preload="metadata" autoplay>
+        <source src="../music/background2.mp3" type="audio/mpeg">
+      </audio>
     <header><h3>TEST</h3></header>
 </head>
 <body>
