--- a/h/des.html
+++ b/h/des.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <audio preload="metadata" autoplay>
-      <source src="../music/background.mp3" type="audio/mpeg">
+      <source src="../music/background2.mp3" type="audio/mpeg">
     </audio>
     <!-- Meta Data -->
     <title>JavaScript Deobfuscator</title>
