--- a/h/downloads.html
+++ b/h/downloads.html
@@ -19,6 +19,10 @@
 
 <nav class="links">
     <h3>MINECRAFT</h3>
+    <p>Versión mas reciente</p>
+    <a href="https://www.mediafire.com/file/iqvi9le0xre3wzf/MCPE_1.19.71_OFICIAL_ULTIMA_VERSION.apk/file" target="_blank">Minecraft 1.19.71</a>
+    <h1>---</h1>
+    <br>
     <a href="https://www.mediafire.com/file/1fzgm231mk5vk3z/MCPE_1.19.70.apk/file" target="_blank">MInecraft 1.19.70</a>
     <br>
     <a href="https://www.mediafire.com/file/mxyz6hcyym329ic/MCPE_1.19.50.apk/file" target="_blank">Minecraft 1.19.50</a>
