--- a/h/downloads.html
+++ b/h/downloads.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,7 +21,6 @@
     <h3>MINECRAFT</h3>
     <p>Versión mas reciente</p>
     <a href="https://www.mediafire.com/file/iqvi9le0xre3wzf/MCPE_1.19.71_OFICIAL_ULTIMA_VERSION.apk/file" target="_blank">Minecraft 1.19.71</a>
-    <h6>---</h6>
     <br>
     <a href="https://www.mediafire.com/file/1fzgm231mk5vk3z/MCPE_1.19.70.apk/file" target="_blank">MInecraft 1.19.70</a>
     <br>
