--- a/405.html
+++ b/405.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Error 404</title>
+    <title>Error 405</title>
 </head>
 <body>
-    <center><h1>Hubo un error al encontrar la página solicitada</h1></center>
+    <h1>
+        <center>
+            Error Not Allowed 
+            Http Error
+        </center>
+    </h1>
     
 </body>
 </html>
