--- a/500.html
+++ b/500.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ERROR 500</title>
+    <title>Error 500</title>
 </head>
 <body>
     <center><h1>SOORY, CODE 500</h1></center>
