--- a/405.html
+++ b/405.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Error 405</title>
 </head>
 <body>
-    <h1>
-        <center>
-            Error Not Allowed 
-            Http Error
-        </center>
-    </h1>
+    <center>
+        <h1>
+            Not Allowed
+        </h1>
+        <h3>
+            HTTP ERROR
+        </h3>
+    </center>
     
 </body>
 </html>
