--- a/500.html
+++ b/500.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Error 500</title>
 </head>
 <body>
-    <center><h1>SOORY, CODE 500</h1></center>
+    <center><h1>SORRY, CODE 500</h1></center>
 </body>
 </html>
