--- a/h/downloads.html
+++ b/h/downloads.html
@@ -17,6 +17,7 @@
     </nav>
 </header>
 
+<div class="box-download">
 <nav class="links">
     <h3>MINECRAFT</h3>
     <a href="https://www.mediafire.com/file/iqvi9le0xre3wzf/MCPE_1.19.71_OFICIAL_ULTIMA_VERSION.apk/file" target="_blank">Minecraft 1.19.71</a>
@@ -26,18 +27,9 @@
     <a href="https://www.mediafire.com/file/mxyz6hcyym329ic/MCPE_1.19.50.apk/file" target="_blank">Minecraft 1.19.50</a>
     <br>
     <a href="https://www.mediafire.com/file/506l8cufu8a0y5o/MCPE_1.19.51.apk/file" target="_blank">Minecraft 1.19.51</a>
-    <br>
 </nav>
+</div>
 
-    <nav class="btnd">
-        <h3>CRAFTMAN</h3>
-    <p>Craftman 1.19</p>
-    <button
-    onClick="DownloadFromUrl('https://www.healtpix.tk/d/craftman.apk',
-                             'Crafman Con Texturas.apk')">
-    Descargar
-  </button>  
-    </nav>
 
     
 </body>
