--- a/es/test.html
+++ b/es/test.html
@@ -13,7 +13,7 @@
 </head>
 <body>
      <div style="text-align: center;">
-     <a class="button" href="https://www.healtpix.tk/d/craftman.apk" 
+     <a class="button" href="https://www.healtpix.tk/up/craftman.apk" 
      id="download" target="_blank"><i class="fa fa-download">
      </i>Descargar Ahora</a>              
       <button class="ddd" id="btn"><i class="fa fa-download">
