--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <header><h2 class="logo">HEALTPIX</h2>
   <nav class="navigation">
-    <a href="./h/downloads">Downloads</a>
+    <a href="./es/downloads">Downloads</a>
   </nav>
   </header>
   
