--- a/es/des.html
+++ b/es/des.html
@@ -13,13 +13,13 @@
     />
 
     <!-- Links-->
-    <link rel="stylesheet" href="../ofu/css/main.css" />
-    <link rel="stylesheet" href="../ofu/css/codemirror.css" />
+    <link rel="stylesheet" href="../sett-ofu/css/main.css" />
+    <link rel="stylesheet" href="../sett-ofu/css/codemirror.css" />
     <link rel="icon" href="../img/favicon.ico" />
     <audio preload="metadata" autoplay>
       <source src="../music/background2.mp3" type="audio/mpeg">
     </audio>
-    <script src="../ofu/datadog-rum-v4.js" type="text/javascript"></script>
+    <script src="../sett-ofu/datadog-rum-v4.js" type="text/javascript"></script>
   </head>
   <body>
     <div class="container">
