--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HEALTPIXX</title>
+  <title>HEALTPIX</title>
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -22,7 +22,6 @@
           <span id="days"></span> días <span id="hours"></span> horas <span id="minutes"></span> minutos <span id="seconds"></span> segundos
       </p>
   </section> 
-  <!--THE END OF CODE NORMAL-->
   <script src="./js/date_time.js"></script>
   </div>
   
