--- a/es/downloads.html
+++ b/es/downloads.html
@@ -8,7 +8,7 @@
     <script src="../js/download.js"></script>
     <link rel="stylesheet" href="../css/download.css">
 </head>
-<body>
+<body class="bg-image">
 <!--Ready-->
     <header><h2 class="logo">Downloads</h2>
     <nav class="navigation">
