--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>HEALTPIX</title>
   <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
+<body class="bg-image">
 
   <header><h2 class="logo">HEALTPIX</h2>
   <nav class="navigation">
