--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <header><h2 class="logo">HEALTPIX</h2>
   <nav class="navigation">
-    <a href="./es/downloads">Downloads</a>
+    <a href="./es/downloads">Descargas</a>
   </nav>
   </header>
   
