--- a/es/downloads.html
+++ b/es/downloads.html
@@ -10,10 +10,10 @@
 </head>
 <body class="bg-image">
 <!--Ready-->
-    <header><h2 class="logo">Downloads</h2>
+    <header><h2 class="logo">Descargas</h2>
     <nav class="navigation">
-        <a href="../index">Home</a>
-        <a href="./test">Descargas</a>
+        <a href="../index">Inicio</a>
+        <a href="./test">Descargas II</a>
     </nav>
 </header>
 
