--- a/es/downloads.html
+++ b/es/downloads.html
@@ -13,7 +13,7 @@
     <header><h2 class="logo">Descargas</h2>
     <nav class="navigation">
         <a href="../index">Inicio</a>
-        <a href="./test">Not_Valid_</a>
+        <a href="./test">Not_Valid</a>
     </nav>
 </header>
 
