--- a/es/test.html
+++ b/es/test.html
@@ -2,22 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../css/desofuscator.css">
+    <link rel="stylesheet" href="../css/test.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
-    <audio preload="metadata" autoplay>
-        <source src="../music/background2.mp3" type="audio/mpeg">
-      </audio>
-    <header><h3>TEST</h3></header>
+    <title>Not_Valid</title>
+    <header><h3>Not_Valid</h3></header>
 </head>
 <body>
      <div style="text-align: center;">
-     <a class="button" href="https://www.healtpix.tk/up/craftman.apk" 
-     id="download" target="_blank"><i class="fa fa-download">
-     </i>Descargar Ahora</a>              
+     <a class="button" href="#" 
+     id="download"><i class="fa fa-download">
+     </i>?link_null</a>              
       <button class="ddd" id="btn"><i class="fa fa-download">
-      </i>No Descargar</button>              
+      </i>_Not_Valid_</button>              
     <script src="../js/countdown.js"></script>
 </body>
 </html>
