--- a/400.html
+++ b/400.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="errors.css">
-    <title>Error 400</title>
+    <title>Error 400 - Petición incorrecta</title>
 </head>
 <body>
-    <center><h1>BAD REQUEST</h1></center>
-    
+  <div class="e-400">
+     <h1>Error 400</h1>
+    <p>Lo sentimos, la petición que has realizado es incorrecta.</p>
+  </div>
 </body>
 </html>
