--- a/500.html
+++ b/500.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="errors.css">
-    <title>Error 500</title>
+    <title>Error 500 - Error interno del servidor</title>
 </head>
 <body>
-    <center><h1>SORRY, CODE 500</h1></center>
+   <div class="e-500">
+      <h1>Error 500</h1>
+    <p>Lo sentimos, se ha producido un error interno en el servidor.</p>
+   </div>
 </body>
 </html>
