--- a/404.html
+++ b/404.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="errors.css">
-    <title>Error 404</title>
+    <title>Error 404 - Página no encontrada</title>
 </head>
 <body>
-    <center><h1>Hubo un error al encontrar la página solicitada</h1></center>
-    
+  <div class="e-404">
+     <h1>Error 404</h1>
+    <p>Lo sentimos, la página que estás buscando no se encuentra.</p>
+  </div>
 </body>
 </html>
