--- a/405.html
+++ b/405.html
@@ -5,17 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="errors.css">
-    <title>Error 405</title>
+    <title>Error 405 - Método no permitido</title>
 </head>
 <body>
-    <center>
-        <h1>
-            Not Allowed
-        </h1>
-        <h3>
-            HTTP ERROR
-        </h3>
-    </center>
+   <div class="e-405">
+     <h1>Error 405</h1>
+    <p>Lo sentimos, el método utilizado para acceder a esta página no está permitido.</p>
+   </div>
     
 </body>
 </html>
