--- a/error/400.html
+++ b/error/400.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="errors.css">
-    <title>Error 404 - Página no encontrada</title>
+    <link rel="stylesheet" href="../css/error.css">
+    <title>Error 400 - Petición incorrecta</title>
 </head>
 <body>
-  <div class="e-404">
-     <h1>Error 404</h1>
-    <p>Lo sentimos, la página que estás buscando no se encuentra.</p>
+  <div class="e-400">
+     <h1>Error 400</h1>
+    <p>Lo sentimos, la petición que has realizado es incorrecta.</p>
   </div>
 </body>
 </html>
