--- a/error/405.html
+++ b/error/405.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="errors.css">
+    <link rel="stylesheet" href="../css/error.css">
     <title>Error 405 - Método no permitido</title>
 </head>
 <body>
