--- a/400.html
+++ b/400.html
@@ -10,7 +10,7 @@
 <body>
   <div class="e-400">
      <h1>Error 400</h1>
-    <p>Lo sentimos, la petición que has realizado es incorrecta.</p>
+    <p>Lo lamento, la petición que has realizado es incorrecta.</p>
   </div>
 </body>
 </html>
