--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
 <body>
   <div class="e-404">
      <h1>Error 404</h1>
-    <p>Lo sentimos, la página que estás buscando no se encuentra.</p>
+    <p>Lo lamento, la página que estás buscando no se encuentra.</p>
   </div>
 </body>
 </html>
