--- a/500.html
+++ b/500.html
@@ -10,7 +10,7 @@
 <body>
    <div class="e-500">
       <h1>Error 500</h1>
-    <p>Lo sentimos, se ha producido un error interno en el servidor.</p>
+    <p>Lo lamento, se ha producido un error interno en el servidor.</p>
    </div>
 </body>
 </html>
