--- a/405.html
+++ b/405.html
@@ -10,7 +10,7 @@
 <body>
    <div class="e-405">
      <h1>Error 405</h1>
-    <p>Lo sentimos, el método utilizado para acceder a esta página no está permitido.</p>
+    <p>¡Oye!, el método utilizado para acceder a esta página no está permitido.</p>
    </div>
     
 </body>
