--- a/es/downloads.html
+++ b/es/downloads.html
@@ -11,7 +11,7 @@
 <body class="bg-image">
     <header><h2 class="logo">Descargas</h2>
     <nav class="navigation">
-        <a href="../index">Inicio</a>
+        <a href="/">Inicio</a>
     </nav>
 </header>
 
