--- a/es/downloads.html
+++ b/es/downloads.html
@@ -37,7 +37,7 @@
 </div>
 <div class="footer-css">
   <footer>
-    <p>Es algo simple porque es difícil personalizar toda la página :(</p>
+    <span id="random">OK</span>
   </footer>
 </div>
 </body>
