--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HEALTPIX</title>
   <link rel="stylesheet" href="./css/style.css">
+  <script src="./js/not.js"></script>
 </head>
 <body class="bg-image">
 
