--- a/es/des.html
+++ b/es/des.html
@@ -168,5 +168,13 @@
    <script src="../ofu/gen3.js"></script>
    <script src="../ofu/gen2.js"></script>
    <script src="../ofu/gen.js"></script>
+
+
+
+
+<div id="disqus_thread"></div>
+<script src="../js/loader.js"></script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
   </body>
+  <script id="dsq-count-scr" src="//healtpixi.disqus.com/count.js" async></script>
 </html>
