--- a/index.html
+++ b/index.html
@@ -1,30 +1,55 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HEALTPIX</title>
-  <link rel="stylesheet" href="./css/style.css">
-  <script src="./js/not.js"></script>
-</head>
-<body class="bg-image">
 
-  <header><h2 class="logo">HEALTPIX</h2>
-  <nav class="navigation">
-    <a href="./es/downloads">Descargas</a>
-  </nav>
-  </header>
-  
-  <div class="countdown">
-    <p class="timeout">Tiempo restante:</p>
-    <section>
-      <p>
-          <span id="days"></span> días <span id="hours"></span> horas <span id="minutes"></span> minutos <span id="seconds"></span> segundos
-      </p>
-  </section> 
-  <script src="./js/date_time.js"></script>
-  </div>
-  
+<head>
+    <script src="./js/js.delay-click.js"></script>
+    <link rel="stylesheet" href="./css/home.style.css">
+    <link rel="stylesheet" href="./css/all.min.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ANIME | INDEX</title>
+</head>
+
+<body>
+    <header>
+        <div class="navigation">
+            <ul>
+                <li class="list active">
+                    <a href="#" onclick="redirigirDespuesDeRetraso('/')">
+                        <span class="icon">
+                            <ion-icon name="home-outline"></ion-icon>
+                        </span>
+                        <span class="text">Inicio</span>
+                    </a>
+                </li>
+                <li class="list">
+                    <a href="#" onclick="redirigirDespuesDeRetraso('es/downloads')">
+                        <span class="icon">
+                            <ion-icon name="download-outline"></ion-icon>
+                        </span>
+                        <span class="text">Descargas</span>
+                    </a>
+                </li>
+                <div class="indicator"></div>
+            </ul>
+        </div>
+    </header>
+    <script src="./js/js.movement.js"></script>
+
+    <div class="countdown">
+        <p class="timeout">Tiempo restante:</p>
+        <section>
+          <p>
+              <span id="days"></span> días <span id="hours"></span> horas <span id="minutes"></span> minutos <span id="seconds"></span> segundos
+          </p>
+      </section> 
+      <script src="./js/date_time.js"></script>
+      </div>
+
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
+
 </html>
