--- a/es/downloads.html
+++ b/es/downloads.html
@@ -36,52 +36,20 @@
     </div>
 
     <div class="contenedor">
-      <div class="box-download">
-        <nav class="links">
-          <h3><< VERSIONES >></h3>
-          <p>
-            <a
-              class="d-5"
-              href="https://www.mediafire.com/file/7t0iemav3efmt0g/MCPE_1.20.12_OFICIAL_ULTIMA_VERSION.apk/file"
-              target="_blank"
-              >Minecraft 1.20.12</a
-            >
-            <br />
-            <br />
-            <a
-              class="d-4"
-              href="https://www.mediafire.com/file/iqvi9le0xre3wzf/MCPE_1.19.71.apk/file"
-              target="_blank"
-              >Minecraft 1.19.71</a
-            >
-            <br />
-            <br />
-            <a
-              class="d-3"
-              href="https://www.mediafire.com/file/1fzgm231mk5vk3z/MCPE_1.19.70.apk/file"
-              target="_blank"
-              >Minecraft 1.19.70</a
-            >
-            <br />
-            <br />
-            <a
-              class="d-2"
-              href="https://www.mediafire.com/file/mxyz6hcyym329ic/MCPE_1.19.50.apk/file"
-              target="_blank"
-              >Minecraft 1.19.50</a
-            >
-            <br />
-            <br />
-            <a
-              class="d-1"
-              href="https://www.mediafire.com/file/506l8cufu8a0y5o/MCPE_1.19.51.apk/file"
-              target="_blank"
-              >Minecraft 1.19.51</a
-            >
-          </p>
-        </nav>
-      </div>
+        <div class="box-download">
+            <nav class="links">
+                <h3>&lt;&lt; VERSIONES &gt;&gt;</h3>
+                <p>
+                    <a href="https://www.mediafire.com/file/7t0iemav3efmt0g/MCPE_1.20.12_OFICIAL_ULTIMA_VERSION.apk/file" target="_blank">Minecraft 1.20.12</a><br><br>
+                    <a href="https://www.mediafire.com/file/iqvi9le0xre3wzf/MCPE_1.19.71.apk/file" target="_blank">Minecraft 1.19.71</a><br><br>
+                    <a href="https://www.mediafire.com/file/1fzgm231mk5vk3z/MCPE_1.19.70.apk/file" target="_blank">Minecraft 1.19.70</a><br><br>
+                    <a href="https://www.mediafire.com/file/506l8cufu8a0y5o/MCPE_1.19.51.apk/file" target="_blank">Minecraft 1.19.51</a><br><br>
+                    <a href="https://www.mediafire.com/file/mxyz6hcyym329ic/MCPE_1.19.50.apk/file" target="_blank">Minecraft 1.19.50</a>r>
+                </p>
+            </nav>
+        </div>
     </div>
+    
     <div class="footer-css">
       <footer>
         <span id="random">OK</span>
