--- a/es/downloads.html
+++ b/es/downloads.html
@@ -44,7 +44,7 @@
                     <a href="https://www.mediafire.com/file/iqvi9le0xre3wzf/MCPE_1.19.71.apk/file" target="_blank">Minecraft 1.19.71</a><br><br>
                     <a href="https://www.mediafire.com/file/1fzgm231mk5vk3z/MCPE_1.19.70.apk/file" target="_blank">Minecraft 1.19.70</a><br><br>
                     <a href="https://www.mediafire.com/file/506l8cufu8a0y5o/MCPE_1.19.51.apk/file" target="_blank">Minecraft 1.19.51</a><br><br>
-                    <a href="https://www.mediafire.com/file/mxyz6hcyym329ic/MCPE_1.19.50.apk/file" target="_blank">Minecraft 1.19.50</a>r>
+                    <a href="https://www.mediafire.com/file/mxyz6hcyym329ic/MCPE_1.19.50.apk/file" target="_blank">Minecraft 1.19.50</a>
                 </p>
             </nav>
         </div>
