--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ANIME | INDEX</title>
+    <title>Inicio</title>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
                     </a>
                 </li>
                 <li class="list">
-                    <a href="#" onclick="redirigirDespuesDeRetraso('es/downloads')">
+                    <a href="#" onclick="redirigirDespuesDeRetraso('es/descargas')">
                         <span class="icon">
                             <ion-icon name="download-outline"></ion-icon>
                         </span>
