--- a/es/descargas.html
+++ b/es/descargas.html
@@ -44,8 +44,9 @@
                     <a href="https://www.mediafire.com/file/iqvi9le0xre3wzf/MCPE_1.19.71.apk/file" target="_blank">Minecraft 1.19.71</a><br><br>
                     <a href="https://www.mediafire.com/file/1fzgm231mk5vk3z/MCPE_1.19.70.apk/file" target="_blank">Minecraft 1.19.70</a><br><br>
                     <a href="https://www.mediafire.com/file/506l8cufu8a0y5o/MCPE_1.19.51.apk/file" target="_blank">Minecraft 1.19.51</a><br><br>
-                    <a href="https://www.mediafire.com/file/mxyz6hcyym329ic/MCPE_1.19.50.apk/file" target="_blank">Minecraft 1.19.50</a>
-                </p>
+                    <a href="https://www.mediafire.com/file/mxyz6hcyym329ic/MCPE_1.19.50.apk/file" target="_blank">Minecraft 1.19.50</a><br><br>
+                    <a href="https://www.mediafire.com/file/msem5pbvi0nmtxd/MCPE_1.14.30.apk/file" target="_blank">Minecraft 1.14.30</a>
+                  </p>
             </nav>
         </div>
     </div>
