--- a/es/descargas.html
+++ b/es/descargas.html
@@ -40,13 +40,14 @@
             <nav class="links">
                 <h3>&lt;&lt; VERSIONES &gt;&gt;</h3>
                 <p>
-                    <a href="https://www.mediafire.com/file/q91mhw7nevv5dkq/MCPE_1.20.15_OFICIAL_ULTIMA_VERSION.apk/file">Minecraft 1.20.15</a><br><br>
+                  <a href="https://www.mediafire.com/file/wxbvpasvynxqnm1/MCPE_1.20.32_OFICIAL_ULTIMA_VERSION.apk/file">Minecraft 1.20.32</a><br><br>
+                    <a href="https://www.mediafire.com/file/q91mhw7nevv5dkq/MCPE_1.20.15.apk/file">Minecraft 1.20.15</a><br><br>
                     <a href="https://www.mediafire.com/file/7t0iemav3efmt0g/MCPE_1.20.12.apk/file" target="_blank">Minecraft 1.20.12</a><br><br>
                     <a href="https://www.mediafire.com/file/iqvi9le0xre3wzf/MCPE_1.19.71.apk/file" target="_blank">Minecraft 1.19.71</a><br><br>
                     <a href="https://www.mediafire.com/file/1fzgm231mk5vk3z/MCPE_1.19.70.apk/file" target="_blank">Minecraft 1.19.70</a><br><br>
                     <a href="https://www.mediafire.com/file/506l8cufu8a0y5o/MCPE_1.19.51.apk/file" target="_blank">Minecraft 1.19.51</a><br><br>
                     <a href="https://www.mediafire.com/file/mxyz6hcyym329ic/MCPE_1.19.50.apk/file" target="_blank">Minecraft 1.19.50</a><br><br>
-                    <a href="https://www.mediafire.com/file/msem5pbvi0nmtxd/MCPE_1.14.30.apk/file" target="_blank">Minecraft 1.14.30</a>
+                    <a href="https://www.mediafire.com/file/msem5pbvi0nmtxd/MCPE_1.14.30.apk/file" target="_blank">Minecraft 1.14.30</a><br>
                   </p>
             </nav>
         </div>
