--- a/es/descargas.html
+++ b/es/descargas.html
@@ -40,8 +40,8 @@
             <nav class="links">
                 <h3>&lt;&lt; VERSIONES &gt;&gt;</h3>
                 <p>
-                  <a href="https://www.mediafire.com/file/wxbvpasvynxqnm1/MCPE_1.20.32_OFICIAL_ULTIMA_VERSION.apk/file">Minecraft 1.20.32</a><br><br>
-                    <a href="https://www.mediafire.com/file/q91mhw7nevv5dkq/MCPE_1.20.15.apk/file">Minecraft 1.20.15</a><br><br>
+                  <a href="https://www.mediafire.com/file/wxbvpasvynxqnm1/MCPE_1.20.32_OFICIAL_ULTIMA_VERSION.apk/file" target="_blank">Minecraft 1.20.32</a><br><br>
+                    <a href="https://www.mediafire.com/file/q91mhw7nevv5dkq/MCPE_1.20.15.apk/file" target="_blank">Minecraft 1.20.15</a><br><br>
                     <a href="https://www.mediafire.com/file/7t0iemav3efmt0g/MCPE_1.20.12.apk/file" target="_blank">Minecraft 1.20.12</a><br><br>
                     <a href="https://www.mediafire.com/file/iqvi9le0xre3wzf/MCPE_1.19.71.apk/file" target="_blank">Minecraft 1.19.71</a><br><br>
                     <a href="https://www.mediafire.com/file/1fzgm231mk5vk3z/MCPE_1.19.70.apk/file" target="_blank">Minecraft 1.19.70</a><br><br>
