--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </header>
     <script src="./js/js.movement.js"></script>
 
-    <!--<div class="countdown">
+   <div class="countdown">
         <p class="timeout">Tiempo restante:</p>
         <section>
           <p>
@@ -45,7 +45,7 @@
           </p>
       </section> 
       <script src="./js/date_time.js"></script>
-      </div>-->
+      </div>
 
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
