--- a/es/descargas.html
+++ b/es/descargas.html
@@ -53,6 +53,10 @@
         </div>
     </div>
     
+    <div class="IOs">
+      <a href="#">Para IOs</a>
+    </div>
+
     <div class="footer-css">
       <footer>
         <span id="random">OK</span>
