--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Inicio</title>
 </head>
 
-<body>
+<body class="bg-img">
     <header>
         <div class="navigation">
             <ul>
@@ -41,8 +41,8 @@
         <p class="timeout">Tiempo restante:</p>
         <section>
           <p>
-              <span id="days"></span> días <span id="hours"></span> horas <span id="minutes"></span> minutos <span id="seconds"></span> segundos
-          </p>
+            <span id="days"></span> días <span id="hours"></span> horas <span id="minutes"></span> minutos <span id="seconds"></span> segundos
+        </p>
       </section> 
       <script src="./js/date_time.js"></script>
       </div>
