--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inicio</title>
+    <meta name="cf-2fa-verify" content="D1by1B1L3O1Y7xyhmqrc">
 </head>
 
 <body class="bg-img">
