Update code Des

--- a/es/des.html
+++ b/es/des.html
@@ -29,6 +29,7 @@
           <div class="left">
             <h1 class="heading">Desofucador de JavaScript</h1>
             <h2>
+              <p>Waos, encontraste esta opcion que estaba algo oculta entre millones de comillas xd.</p>
                 Un desofuscador simple pero poderoso para eliminar las técnicas comunes de ofuscación de JavaScript
             </h2>
           </div>
