--- a/es/activator.html
+++ b/es/activator.html
@@ -15,6 +15,7 @@
 
     <div class="txt">
         <p>
+            <p class="txt-onlyPC">(Only pc)</p>
             Hello, this is a tiny work for used and actived your office, download and install Cr4ck3d your 0ff1c3 
         </p>
     </div>
